made some changes

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
               data-testid="slackProfilePicture">
       </div>
       <div  >
-          <h1 data-test-id="slackDisplayName">Emmanuel</h1>
+          <h1 data-testid="slackDisplayName">Emmanuel</h1>
           <div class="clock-container">
             <p data-testid="currentTimeUTC"></p>
             <p data-testid="currentDay"></p>
           </div>
-          <span  data-test-id="SlackEmail">ikechukwuemmanuel427@gmail.com</span>
+          <span  data-testid="SlackEmail">ikechukwuemmanuel427@gmail.com</span>
         </div>
     </div>
     
@@ -39,8 +39,8 @@
                 <h2>Useful Links</h2>
         <ul>
         <li><a href="https://hng.tech/learn" data-testid="hngLink">Hng Link</a></li>
-        <li><a href="https://keyword.dog" data-test-id="keywordLink">keyword Dog</a></li>
-        <li><a href="https://scrapeanyweb.site" data-test-id="scrapeanyweb">scrape any web</a></li>
+        <li><a href="https://keyword.dog" data-testid="keywordLink">keyword Dog</a></li>
+        <li><a href="https://scrapeanyweb.site" data-testid="scrapeanyweb">scrape any web</a></li>
         </ul>
       </div>
         </section> 
