--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MY PERSONAL WEBSITE</title>
-<link rel="stylesheet" href="\style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
   <div class="container">
     <div class="header-container">  
       <div class="header">
-        <img src="\image.jpg" alt="slackProfilePicture" 
+        <img src="image.jpg" alt="slackProfilePicture" 
               data-testid="slackProfilePicture">
       </div>
       <div  >
