--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               data-testid="slackProfilePicture">
       </div>
       <div  >
-          <h1 data-testid="slackDisplayName">Emmanuel</h1>
+          <h1 data-testid="slackDisplayName">Emma-Nwa</h1>
           <div class="clock-container">
             <p data-testid="currentTimeUTC"></p>
             <p data-testid="currentDay"></p>
